# hebbot

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  config.json.example  de.haeckerfelix.Hebbot.json  template.md.example
.github/workflows/: build.yml  clippy.yml  codespell.yml  container.yml  rustfmt.yml  test.yml
configuration/: config.json.example  config.toml.example
doc/: README.md
doc/example_config/: config.toml  docker-compose.yml  project_template.md  report_template.md  section_template.md  template.md  update_config.sh
src/: bot.rs  bot_message_type.rs  config.rs  error.rs  main.rs  news.rs  news_store.rs  project.rs  reaction_type.rs  render.rs  section.rs  store.rs  utils.rs
