[package]
name = "hebbot"
version = "2.1.0"
authors = ["Felix Häcker <haeckerfelix@gnome.org>"]
edition = "2018"

[dependencies]
ruma = "0.2.0"
matrix-sdk = { git="https://github.com/matrix-org/matrix-rust-sdk" }
serde = "1.0"
serde_json = "1.0"
url = "2.2"
tokio = { version="1.7", features = ["macros"] }
async-trait = "0.1"
log = "0.4"
pretty_env_logger = "0.4"
chrono = { version = "0.4", features = ["serde"] }
regex = "1.5"
rand = "0.8"
mime = "0.3"
toml = "0.5"
async-process = "1.2"
